Fix docs' `.highlight` styles on mobile

--- a/docs-assets/scss/docs.scss
+++ b/docs-assets/scss/docs.scss
@@ -5,8 +5,8 @@
 
 // Bootstrap doc css override
 
-.bd-example,
-.highlight {
+.bd-content .highlight,
+.bd-example {
   margin-right: 0;
   margin-left: 0;
 }
